TEST_PROGRAMS/INVALID/adam_carruthers/interleavedDeclarationsAndStatements.min
var x: int;
read x;
var y: float;
y = 3.2;

